tdf#115880 end drawview text editing on move navigation

Change-Id: Id554f4f0bac547e65f47544f116f40f49d4d6135